--- a/index.html
+++ b/index.html
@@ -4,33 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./style.css" rel="stylesheet">
     <title>Calculator</title>
 </head>
-<body>
-    <main class="calculator">
-        <div class="container">
-            <div class="display"></div>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-            <button class="button" type="button"></button>
-        </div>
+<body style="text-align: center">
+    <main>
+        <h1>Simple Calculator</h1>
+        <input type="number" id="num1">
+        <select id="operator">
+            <option value="add">+ Plus</option>
+            <option value="subtract">- Minus</option>
+            <option value="multiply">* Multiplied By</option>
+            <option value="divide">/ Divided By</option>
+        </select>
+        <input type="number" id="num2">
+        <button onclick="equals()">=</button>
     </main>
     <script src="./calculator.js"></script>
 </body>
