--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body style="text-align: center">
     <main>
+        <h1>hello</h1>
         <h1>Simple Calculator</h1>
         <input type="number" id="num1">
         <select id="operator">
